MERN-Social-Media/mongo.yml
apiVersion: v1
kind: Service 
metadata:
  name: mongodb
  namespace: mern   
  labels:
    app: mongodb
spec:
   selector:
      app: mongodb
   ports:
      - protocol: TCP
        port: 27017
        targetPort: 27017
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo-statefulset
  namespace: mern  
  labels:
    app: mongodb
spec:
   serviceName: mongodb 
   replicas: 1
   selector:
    matchLabels:
      app: mongodb
   template:
    metadata:
      labels:
        app: mongodb
        selector: mongodb
    spec:
      containers:
        - name: mongodb-container
          image: mongo
          ports: 
            - containerPort: 27017
          volumeMounts:
            - name: pvc
              mountPath: /data/db
   volumeClaimTemplates:
      - metadata:
          name: pvc
        spec: 
          accessModes:
            - ReadWriteOnce
          resources:
            requests:
              storage: 1Gi
