MERN-Social-Media/node.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-deployment
  namespace: mern 
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: node-express-container
        image: gerrome/mern-social-media_server:1.2
        ports:
        - containerPort: 5000  
---
apiVersion: v1
kind: Service
metadata:
  name: node-service
  namespace: mern  
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
  - name: http
    port: 80
    targetPort: 5000
