MERN-Social-Media/react.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-deployment
  namespace: mern  
  labels:
    app: client
spec:
  replicas: 2
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: react-container
        image: gerrome/mern-social-media_client:1      
        imagePullPolicy: Always
        ports:
        - containerPort: 80        
---
apiVersion: v1
kind: Service
metadata:
  name: react-service
  namespace: mern 
spec:
  type: ClusterIP
  selector:
    app: client
  ports:
  - name: http
    port: 80
    targetPort: 80
