MERN-Social-Media/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: mern   
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1    
spec:
  rules:
  - host: app.ifahsvictor.com
    http:
     paths:
     - path: /?(.*)
       pathType: Prefix
       backend:
         service:
           name: react-service
           port:
             number: 80
